// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app lock selection page should in case of fetching invitation show message 1`] = `
<View
  center={true}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "fontFamily": "System",
        },
        Object {
          "backgroundColor": "#ffffff",
          "color": "#777777",
        },
        Object {
          "fontWeight": "600",
        },
        Object {
          "textAlign": "center",
        },
        Object {
          "backgroundColor": "transparent",
        },
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ]
    }
  >
    Loading please wait...
  </Text>
</View>
`;

exports[`app lock selection page should render properly 1`] = `
<View
  center={true}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "fontFamily": "System",
        },
        Object {
          "backgroundColor": "#ffffff",
          "color": "#777777",
        },
        Object {
          "fontWeight": "600",
        },
        Object {
          "textAlign": "center",
        },
        Object {
          "backgroundColor": "transparent",
        },
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ]
    }
  />
  <View
    style={
      Object {
        "borderRadius": 3,
        "marginLeft": 0,
        "marginRight": 0,
        "overflow": "hidden",
      }
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        Object {
          "busy": false,
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "marginTop": 10,
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#777777",
            "borderColor": "#2089dc",
            "borderRadius": 3,
            "borderWidth": 0,
            "color": "#ffffff",
            "flexDirection": "row",
            "justifyContent": "center",
            "marginTop": 10,
            "padding": 8,
            "textAlign": "center",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 18,
              "paddingBottom": 1,
              "paddingTop": 2,
              "textAlign": "center",
            }
          }
        >
          Try again
        </Text>
      </View>
    </View>
  </View>
</View>
`;
